feat: dynamic pipelines: PR remarks